[package]
name = "ram-monitor"
version = "1.0.0"
edition = "2021"
authors = ["Ashwinhegde19"]
description = "A beautiful glass-design RAM and CPU monitor for Windows"
license = "MIT"
repository = "https://github.com/Ashwinhegde19/ram-monitor"

[dependencies]
windows = { version = "0.62", features = [
    "Win32", "Win32_System", "Win32_UI", "Win32_System_Threading", 
    "Win32_UI_WindowsAndMessaging", "Win32_System_SystemInformation",
    "Win32_Graphics_Gdi", "Win32_Foundation", "Win32_System_LibraryLoader"
] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true